--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,11 +7,28 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        >
+        <service
+            android:name="org.scorelab.sense.Sense"
+            android:icon="@drawable/icon"
+            android:label="@string/app_name"
+            android:enabled="true" >
+        </service>
+
+        <receiver android:name="org.scorelab.sense.SenseScheduleReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="StartSenseScheduleReceiver" >
+        </receiver>
     </application>
 
 </manifest>
