--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,23 +8,24 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        >
+        android:theme="@style/AppTheme" >
         <service
             android:name="org.scorelab.sense.Sense"
+            android:enabled="true"
             android:icon="@drawable/icon"
-            android:label="@string/app_name"
-            android:enabled="true" >
+            android:label="@string/app_name" >
         </service>
 
         <receiver android:name="org.scorelab.sense.SenseScheduleReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </receiver>
         <receiver android:name="StartSenseScheduleReceiver" >
