--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,7 +10,8 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
