Sense data syncing component partially implemented.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,3 @@
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.scorelab.sense"
     android:versionCode="1"
@@ -10,41 +9,60 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-	
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_SYNC_STATS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-        
-			<activity android:name="org.scorelab.sense.SenseActivity"
-				android:theme="@android:style/Theme.Translucent.NoTitleBar"
-				android:label="@string/app_name">
-				<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-				</intent-filter>
-			</activity>
+        <activity
+            android:name="org.scorelab.sense.SenseActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
             android:name="org.scorelab.sense.Sense"
             android:enabled="true"
             android:icon="@drawable/icon"
             android:label="@string/app_name" >
         </service>
+        <service android:name="org.scorelab.sense.datasyncer.AuthenticatorService" >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        <service
+            android:name="org.scorelab.sense.datasyncer.SyncService"
+            android:exported="true"
+            android:process=":sync" >
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
 
         <receiver android:name="org.scorelab.sense.SenseScheduleReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-                  
-                
             </intent-filter>
         </receiver>
-        
-        
     </application>
 
 </manifest>
