--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	
+	<uses-permission android:name="android.permission.READ_SMS" /> 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -45,6 +45,11 @@
             </intent-filter>
         </receiver>
         
+        <receiver android:name="org.scorelab.sense.dataCollector.sms.SmsDataReceiver" android:permission="android.permission.BROADCAST_SMS" android:exported="true">
+    		<intent-filter android:priority="5822" >
+        		<action android:name="android.provider.Telephony.SMS_RECEIVED" />
+   			 </intent-filter>
+ 		</receiver>
         
     </application>
 
